--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="src\AudioEngine.cpp" />
     <ClCompile Include="src\AudioListener.cpp" />
     <ClCompile Include="src\BoxColliderComponent.cpp" />
+    <ClCompile Include="src\ButtonElement.cpp" />
     <ClCompile Include="src\CameraComponent.cpp" />
     <ClCompile Include="src\CollisionCallbackManager.cpp" />
     <ClCompile Include="src\CollisionComponent.cpp" />
@@ -43,6 +44,7 @@
     <ClCompile Include="src\EntityPool.cpp" />
     <ClCompile Include="src\ExamplePlayerController.cpp" />
     <ClCompile Include="src\Framebuffer.cpp" />
+    <ClCompile Include="src\ImageLoader.cpp" />
     <ClCompile Include="src\InputComponent.cpp" />
     <ClCompile Include="src\JsonHelpers.cpp" />
     <ClCompile Include="src\ButtonEvents.h" />
@@ -64,12 +66,17 @@
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\ShaderLibrary.cpp" />
     <ClCompile Include="src\Context.cpp" />
+    <ClCompile Include="src\ShapeElement.cpp" />
     <ClCompile Include="src\TestComponent.cpp" />
+    <ClCompile Include="src\TextElement.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\TextureLibrary.cpp" />
     <ClCompile Include="src\TimeManager.cpp" />
     <ClCompile Include="src\Transform.cpp" />
     <ClCompile Include="src\TransformComponent.cpp" />
+    <ClCompile Include="src\UIComponent.cpp" />
+    <ClCompile Include="src\UIElement.cpp" />
+    <ClCompile Include="src\UISystem.cpp" />
     <ClCompile Include="src\UniformBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -443,6 +450,7 @@
     <ClInclude Include="src\AudioEngine.h" />
     <ClInclude Include="src\AudioListener.h" />
     <ClInclude Include="src\BoxColliderComponent.h" />
+    <ClInclude Include="src\ButtonElement.h" />
     <ClInclude Include="src\CameraComponent.h" />
     <ClInclude Include="src\ColliderTypes.h" />
     <ClInclude Include="src\CollisionCallbackManager.h" />
@@ -460,6 +468,7 @@
     <ClInclude Include="src\GamepadAxes.h" />
     <ClInclude Include="src\GamepadButtons.h" />
     <ClInclude Include="src\GLinclude.h" />
+    <ClInclude Include="src\ImageLoader.h" />
     <ClInclude Include="src\Input.h" />
     <ClInclude Include="src\InputComponent.h" />
     <ClInclude Include="src\InputManager.h" />
@@ -493,13 +502,18 @@
     <ClInclude Include="src\Shader.h" />
     <ClInclude Include="src\ShaderEnum.h" />
     <ClInclude Include="src\ShaderLibrary.h" />
+    <ClInclude Include="src\ShapeElement.h" />
     <ClInclude Include="src\Sound.h" />
     <ClInclude Include="src\TestComponent.h" />
+    <ClInclude Include="src\TextElement.h" />
     <ClInclude Include="src\Texture.h" />
     <ClInclude Include="src\TextureEnum.h" />
     <ClInclude Include="src\TextureLibrary.h" />
     <ClInclude Include="src\Transform.h" />
     <ClInclude Include="src\TransformComponent.h" />
+    <ClInclude Include="src\UIComponent.h" />
+    <ClInclude Include="src\UIElement.h" />
+    <ClInclude Include="src\UISystem.h" />
     <ClInclude Include="src\UniformBuffer.h" />
     <ClInclude Include="src\TimeManager.h" />
     <ClInclude Include="src\UniformData.h" />
