Overhauled component system

--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -32,12 +32,13 @@
     <ClCompile Include="src\AudioEmitter.cpp" />
     <ClCompile Include="src\AudioEngine.cpp" />
     <ClCompile Include="src\AudioListener.cpp" />
-    <ClCompile Include="src\BoxColliderComponent.cpp" />
     <ClCompile Include="src\CameraComponent.cpp" />
     <ClCompile Include="src\CollisionCallbackManager.cpp" />
     <ClCompile Include="src\CollisionComponent.cpp" />
-    <ClCompile Include="src\Component.cpp" />
+    <ClCompile Include="src\ComponentBase.cpp" />
     <ClCompile Include="src\ComponentFactory.cpp" />
+    <ClCompile Include="src\Component.cpp" />
+    <ClCompile Include="src\CoreComponentRegistrar.cpp" />
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\EntityFactory.cpp" />
     <ClCompile Include="src\EntityPool.cpp" />
@@ -442,15 +443,18 @@
     <ClInclude Include="src\AudioEmitter.h" />
     <ClInclude Include="src\AudioEngine.h" />
     <ClInclude Include="src\AudioListener.h" />
-    <ClInclude Include="src\BoxColliderComponent.h" />
     <ClInclude Include="src\CameraComponent.h" />
     <ClInclude Include="src\ColliderTypes.h" />
     <ClInclude Include="src\CollisionCallbackManager.h" />
     <ClInclude Include="src\CollisionCallbackReceipt.h" />
     <ClInclude Include="src\CollisionComponent.h" />
     <ClInclude Include="src\CollisionData.h" />
-    <ClInclude Include="src\Component.h" />
+    <ClInclude Include="src\ComponentBase.h" />
     <ClInclude Include="src\ComponentFactory.h" />
+    <ClInclude Include="src\Component.h" />
+    <ClInclude Include="src\CoreComponentRegistrar.h" />
+    <ClInclude Include="src\CoreComponents.h" />
+    <ClInclude Include="src\RegisteredComponentData.h" />
     <ClInclude Include="src\ComponentState.h" />
     <ClInclude Include="src\CreateCollisionShapeInfo.h" />
     <ClInclude Include="src\Entity.h" />
