--- a/Mackerel-Demo/Mackerel-Demo.vcxproj
+++ b/Mackerel-Demo/Mackerel-Demo.vcxproj
@@ -159,6 +159,9 @@
     <ClInclude Include="src\TestApp.h" />
     <ClInclude Include="src\TestDemoComponent.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="TestScene.scn" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
