--- a/Mackerel-Demo/Mackerel-Demo.vcxproj.filters
+++ b/Mackerel-Demo/Mackerel-Demo.vcxproj.filters
@@ -54,4 +54,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="TestScene.scn">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
