--- a/Mackerel-Demo/Mackerel-Demo.vcxproj
+++ b/Mackerel-Demo/Mackerel-Demo.vcxproj
@@ -140,10 +140,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\AnimationDemo.cpp" />
+    <ClCompile Include="src\AudioDemo.cpp" />
     <ClCompile Include="src\ComponentRegistrar.cpp" />
     <ClCompile Include="src\DemoApp.cpp" />
+    <ClCompile Include="src\FinalDemoApp.cpp" />
     <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\PhysicsDemo.cpp" />
     <ClCompile Include="src\PlatformerDemo.cpp" />
+    <ClCompile Include="src\RenderingDemo.cpp" />
     <ClCompile Include="src\TestApp.cpp" />
     <ClCompile Include="src\TestDemoComponent.cpp" />
     <ClCompile Include="src\TestJsonApp.cpp" />
@@ -154,9 +159,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AnimationDemo.h" />
+    <ClInclude Include="src\AudioDemo.h" />
     <ClInclude Include="src\ComponentRegistrar.h" />
     <ClInclude Include="src\DemoApp.h" />
+    <ClInclude Include="src\FinalDemoApp.h" />
+    <ClInclude Include="src\PhysicsDemo.h" />
     <ClInclude Include="src\PlatformerDemo.h" />
+    <ClInclude Include="src\RenderingDemo.h" />
     <ClInclude Include="src\TestApp.h" />
     <ClInclude Include="src\TestDemoComponent.h" />
     <ClInclude Include="src\TestJsonApp.h" />
