--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -620,6 +620,10 @@
     <Image Include="res\UI\ButtonQuitSmall.png" />
     <Image Include="res\UI\ButtonRenderingSmall.png" />
     <Image Include="res\UI\MenuSmall.png" />
+    <Image Include="res\UI\PlayAnimation.png" />
+    <Image Include="res\UI\PlayAudio.png" />
+    <Image Include="res\UI\PlayPhysics.png" />
+    <Image Include="res\UI\PlayRendering.png" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
