--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="src\AudioEmitter.cpp" />
     <ClCompile Include="src\AudioEngine.cpp" />
     <ClCompile Include="src\AudioListener.cpp" />
+    <ClCompile Include="src\BlockAllocator.cpp" />
     <ClCompile Include="src\ButtonElement.cpp" />
     <ClCompile Include="src\CacheReader.cpp" />
     <ClCompile Include="src\CameraComponent.cpp" />
@@ -56,6 +57,7 @@
     <ClCompile Include="src\InputManager.cpp" />
     <ClCompile Include="src\MaterialLibrary.cpp" />
     <ClCompile Include="src\Material.cpp" />
+    <ClCompile Include="src\MemoryChunk.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\MeshLibrary.cpp" />
     <ClCompile Include="src\PhysicsHelpers.cpp" />
@@ -453,6 +455,7 @@
     <ClInclude Include="src\AudioEmitter.h" />
     <ClInclude Include="src\AudioEngine.h" />
     <ClInclude Include="src\AudioListener.h" />
+    <ClInclude Include="src\BlockAllocator.h" />
     <ClInclude Include="src\ButtonElement.h" />
     <ClInclude Include="src\CacheReader.h" />
     <ClInclude Include="src\CameraComponent.h" />
@@ -466,6 +469,7 @@
     <ClInclude Include="src\Component.h" />
     <ClInclude Include="src\CoreComponentRegistrar.h" />
     <ClInclude Include="src\CoreComponents.h" />
+    <ClInclude Include="src\MemoryChunk.h" />
     <ClInclude Include="src\Paths.h" />
     <ClInclude Include="src\RegisteredComponentData.h" />
     <ClInclude Include="src\ComponentState.h" />
