Gltf loading done, and basic data extraction. Need to implement uploading of the data to GPU buffers, and loading of animation data.

--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -71,6 +71,7 @@
     <ClCompile Include="src\ShaderLibrary.cpp" />
     <ClCompile Include="src\Context.cpp" />
     <ClCompile Include="src\ShapeElement.cpp" />
+    <ClCompile Include="src\SkinnedMeshRendererComponenet.cpp" />
     <ClCompile Include="src\TestComponent.cpp" />
     <ClCompile Include="src\TextElement.cpp" />
     <ClCompile Include="src\Texture.cpp" />
@@ -447,6 +448,10 @@
     <ClInclude Include="ext\nlohmann\json.hpp" />
     <ClInclude Include="ext\nlohmann\json_fwd.hpp" />
     <ClInclude Include="ext\STBI\stb_image.h" />
+    <ClInclude Include="ext\tinygltf\json.hpp" />
+    <ClInclude Include="ext\tinygltf\stb_image.h" />
+    <ClInclude Include="ext\tinygltf\stb_image_write.h" />
+    <ClInclude Include="ext\tinygltf\tiny_gltf.h" />
     <ClInclude Include="ext\TinyOBJ\tiny_obj_loader.h" />
     <ClInclude Include="src\App.h" />
     <ClInclude Include="src\AppAttorney.h" />
@@ -516,7 +521,10 @@
     <ClInclude Include="src\ShaderEnum.h" />
     <ClInclude Include="src\ShaderLibrary.h" />
     <ClInclude Include="src\ShapeElement.h" />
+    <ClInclude Include="src\SkinnedMeshData.h" />
+    <ClInclude Include="src\SkinnedMeshRendererComponent.h" />
     <ClInclude Include="src\Sound.h" />
+    <ClInclude Include="src\STBIinclude.hpp" />
     <ClInclude Include="src\TestComponent.h" />
     <ClInclude Include="src\TextElement.h" />
     <ClInclude Include="src\Texture.h" />
@@ -746,7 +754,7 @@
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(SolutionDIR)\Mackerel-Core\ext\TinyOBJ;$(SolutionDIR)\Mackerel-Core\ext\bullet3-master\src;$(SolutionDIR)\Mackerel-Core\ext\nlohmann;$(SolutionDIR)\Mackerel-Core\ext\easyloggingpp-9.97.0;$(SolutionDIR)\Mackerel-Core\ext\Eigen 3.4.0;$(SolutionDIR)\Mackerel-Core\ext\GLFW 3.3.8\include;$(SolutionDIR)\Mackerel-Core\ext\GLAD\include;$(SolutionDIR)\Mackerel-Core\ext\Dear-ImGui 1.89.2;</AdditionalIncludeDirectories>
-      <AdditionalIncludeDirectories>$(SolutionDIR)\Mackerel-Core\ext\STBI;$(SolutionDIR)\Mackerel-Core\ext\TinyOBJ;$(SolutionDIR)\Mackerel-Core\ext\bullet3-master\src;$(SolutionDIR)\Mackerel-Core\ext\nlohmann;$(SolutionDIR)\Mackerel-Core\ext\easyloggingpp-9.97.0;$(SolutionDIR)\Mackerel-Core\ext\Eigen 3.4.0;$(SolutionDIR)\Mackerel-Core\ext\GLFW 3.3.8\include;$(SolutionDIR)\Mackerel-Core\ext\GLAD\include;$(SolutionDIR)\Mackerel-Core\ext\Dear-ImGui 1.89.2;$(SolutionDIR)\Mackerel-Core\ext\ozz</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDIR)\Mackerel-Core\ext\STBI;$(SolutionDIR)\Mackerel-Core\ext\TinyOBJ;$(SolutionDIR)\Mackerel-Core\ext\bullet3-master\src;$(SolutionDIR)\Mackerel-Core\ext\nlohmann;$(SolutionDIR)\Mackerel-Core\ext\easyloggingpp-9.97.0;$(SolutionDIR)\Mackerel-Core\ext\Eigen 3.4.0;$(SolutionDIR)\Mackerel-Core\ext\GLFW 3.3.8\include;$(SolutionDIR)\Mackerel-Core\ext\GLAD\include;$(SolutionDIR)\Mackerel-Core\ext\Dear-ImGui 1.89.2;$(SolutionDIR)\Mackerel-Core\ext\ozz;$(SolutionDIR)\Mackerel-Core\ext\tinygltf</AdditionalIncludeDirectories>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <TreatWarningAsError>true</TreatWarningAsError>
